# libtref

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  classtref_1_1DecodedBitmap-members.html  classtref_1_1DecodedBitmap.html  classtref_1_1DecodedBitmap.js  classtref_1_1OutputBitmap-members.html  classtref_1_1OutputBitmap.html  classtref_1_1OutputBitmap.js  dir_2a7715133bb427e8685f91647a0f1730.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  doxygen_crawl.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  group__tref.html  group__tref.js  hierarchy.html  hierarchy.js  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  namespacetref.html  namespacetref.js  navtreedata.js  navtreeindex0.js  qoi_8h_source.html  structqoi__desc-members.html  structqoi__desc.html  (+17 more)
.github/workflows/: main.yml
cmake/: trefConfig.cmake.in
doxygen/: Doxyfile  custom.css  header.html
include/tref/: tref.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
src/: tref.cpp
tools/gtref/: CMakeLists.txt
tools/gtref/cmake/: add_embedded_file.cmake
tools/gtref/include/: common.hpp  file_edit.hpp  font.hpp  help.hpp  history.hpp  preview.hpp  selection.hpp  view.hpp
tools/gtref/src/: file_edit.cpp  font.cpp  help.cpp  history.cpp  main.cpp  preview.cpp  selection.cpp  view.cpp
tools/trefc/: CMakeLists.txt
tools/trefc/include/: message.hpp  trefc.hpp
tools/trefc/src/: image.cpp  input.cpp  main.cpp  output.cpp
